--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,139 +1,151 @@
-  table {
-    border-collapse: collapse;
-    width: 100%;
-}
-.collapse {
-    //display: block;
-}
-th, td {
-    text-align: left;
-    border:0px;
-}
-/*.margina{*/
-    /*margin-top: 10px;*/
-/*}*/
-.label {
-        border: 1px solid transparent;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: 0 1px 1px rgba(0,0,0,.05);
-    display: inline;
-    padding: 3px 15px;
-    font-size: 75%;
-    font-weight: 700;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: 0.25em;
-    font-size: 12px;
-}
-.lab{font-size: 100%;
-    font-weight: 400;
-}
-.right{float:right;}
+@font-face { font-family: 'Roboto'; src: local("Roboto Light"), local("Roboto-Light"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-light-webfont.eot"); src: local("Roboto Light"), local("Roboto-Light"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-light-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-light-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-light-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-light-webfont.svg#open_sanslight") format("svg"); font-weight: 300; font-style: normal; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Light Italic"), local("Roboto-Light-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-lightitalic-webfont.eot"); src: local("Roboto Light Italic"), local("Roboto-Light-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-lightitalic-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-lightitalic-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-lightitalic-webfont.svg#open_sanslight_italic") format("svg"); font-weight: 300; font-style: italic; }
+@font-face { font-family: 'Roboto'; src: local("Roboto"), local("Roboto"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-regular-webfont.eot"); src: local("Roboto"), local("Roboto"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-regular-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-regular-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-regular-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-regular-webfont.svg#open_sansregular") format("svg"); font-weight: 400; font-style: normal; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Italic"), local("Roboto-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-italic-webfont.eot"); src: local("Roboto Italic"), local("Roboto-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-italic-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-italic-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-italic-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-italic-webfont.svg#open_sansitalic") format("svg"); font-weight: 400; font-style: italic; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Semibold"), local("Roboto-Semibold"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-medium-webfont.eot"); src: local("Roboto Semibold"), local("Roboto-Semibold"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-medium-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-medium-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-medium-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-medium-webfont.svg#open_sansmedium") format("svg"); font-weight: 500; font-style: normal; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Semibold Italic"), local("Roboto-Semibold-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-mediumitalic-webfont.eot"); src: local("Roboto Semibold Italic"), local("Roboto-Semibold-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-mediumitalic-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-mediumitalic-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-mediumitalic-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-mediumitalic-webfont.svg#open_sansmedium_italic") format("svg"); font-weight: 500; font-style: italic; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Bold"), local("Roboto-Bold"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bold-webfont.eot"); src: local("Roboto Bold"), local("Roboto-Bold"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bold-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bold-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bold-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bold-webfont.svg#open_sansbold") format("svg"); font-weight: 700; font-style: normal; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Bold Italic"), local("Roboto-Bold-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bolditalic-webfont.eot"); src: local("Roboto Bold Italic"), local("Roboto-Bold-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bolditalic-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bolditalic-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-bolditalic-webfont.svg#open_sansbold_italic") format("svg"); font-weight: 700; font-style: italic; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Extrabold"), local("Roboto-Extrabold"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-black-webfont.eot"); src: local("Roboto Extrabold"), local("Roboto-Extrabold"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-black-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-black-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-black-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-black-webfont.svg#open_sansblack") format("svg"); font-weight: 900; font-style: normal; }
+@font-face { font-family: 'Roboto'; src: local("Roboto Extrabold Italic"), local("Roboto-Extrabold-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-blackitalic-webfont.eot"); src: local("Roboto Extrabold Italic"), local("Roboto-Extrabold-Italic"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-blackitalic-webfont.eot?#iefix") format("embedded-opentype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-blackitalic-webfont.woff") format("woff"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-blackitalic-webfont.ttf") format("truetype"), url("http://tech.quickpay.net/public/fonts/roboto/roboto-blackitalic-webfont.svg#open_sansblack_italic") format("svg"); font-weight: 900; font-style: italic; }
+*, th, td { font-family: 'Roboto', 'Arial Narrow', sans-serif; font-weight: 300; }
 
-.table {
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 50px;
-}
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-    border:0px;
-    margin-top: 10px;
-}
-.table-condensed>tbody>tr>td, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>td, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>thead>tr>th {
-    padding:0px;
-}
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
-    line-height: 1.42857143;
-    vertical-align: top;
-    border-top: 0px solid #ddd;
-}
+strong, b { font-weight: 500 !important; }
 
+body { padding: 0px 0 50px 0; margin-top: 0px; background: #fff; }
 
-.get_bg {
-    background-color: #bce8f1 !important;
-    border-color: #bce8f1 !important;
-    //color:black;
-    color: #337ab7;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
-.delete_bg {
-    background-color: #faebcc !important;
-    border-color: #faebcc !important;
-    //color:black;
-    color: #f0bc4e;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+h1, h2, h3, h4, h5, h6 { font-weight: 700; }
 
-}
-.put_bg {
-    background-color: #d6e9c6 !important;
-    border-color: #d6e9c6 !important;
-    //color:black;
-    color: #3c763d;
+h1 { font-weight: 900; font-size: 40px; }
 
-}  .patch_bg {
-    background-color: #a9d3f0 !important;
-   color: #6095ff;
-}
-   /*.backgroundtable{background: white;}*/
-  .padd{  padding: 10px 10px 10px 10px;  }
-  .padd-l{  padding: 0px 10px;}
-  .padd-t{  margin: 10px 0px;}
- .bg{
-    border-bottom: 0.01px solid rgb(232, 232, 232);
-    background: white;
-    padding: 10px 10px;
-    color:black;
-     font-weight: 200;
-}
-  .bgd{
-    border-bottom: 0.01px solid rgb(232, 232, 232);
-    padding: 25px 10px;
-    color:black;
-}
-.post_bg {
-    background-color: #ebccd1 !important;
-    border-color: #ebccd1 !important;
-    color: #a94442;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
+h2 { font-size: 24px !important; border-bottom: 1px solid #ccc; margin-top: 48px !important; }
 
+h3 { font-size: 18px !important; }
 
-.tbodyfeed{background: #78bcff; border:0;}
-.put_th {
-    background-color: #5cb85c;
-    color: white;
+h4 { font-size: 14px !important; }
 
-}
-.label-patch{
-    background: #558bb7;
-}
+pre, code { font-family: Monaco, monospace !important; }
 
+code { white-space: nowrap; }
 
-.get_th {
-    background-color: #337ab7;
-    color: white;
-}
-.post_th {
-    background-color: indianred;
-    color: white;
-}
-.patch_th {
-    background-color: #6095ff;
-    color: white;
-}
-.delete_th {
-    background-color: #f0ad4e;
-    color: white;
-}
-  .h3{
-    font-weight: 500;
-}
-.bold{font-weight: bold;}
-.siz{font-size: 14px; font-weight: 300; padding-bottom:5px;padding-left:0px; width:25%; text-align:left; border:0; }
-.sizr{font-size: 14px; padding-left:10px; text-align:right; border:0; }
+table thead * { font-weight: bold !important; }
+
+#header .navbar-inverse { background-color: #28303A; border: 0; }
+#header .navbar-brand { padding-top: 16px; }
+#header .navbar-brand img { height: 36px; }
+#header .navbar-inverse .navbar-nav > li > a { padding-top: 26px; padding-bottom: 16px; font-size: 14px; color: #a2afbf; }
+#header .navbar-inverse .navbar-nav > li > a:hover, #header .navbar-inverse .navbar-nav > li > a:focus { color: white; }
+#header .navbar-inverse .navbar-nav > .active > a, #header .navbar-inverse .navbar-nav > .active > a:hover, #header .navbar-inverse .navbar-nav > .active > a:focus { color: white; background: inherit; }
+
+#left-menu { margin-top: 20px; }
+#left-menu li.section-header { font-size: 20px; font-weight: 500; margin-top: 20px; border-bottom: 1px solid #ccc; }
+#left-menu li.active { background: #eee; }
+#left-menu li.active a { color: inherit; }
+
+#quickpay-swagger h2 { font-size: 20px !important; text-transform: capitalize; }
+#quickpay-swagger a { color: inherit; }
+#quickpay-swagger .panel { margin: 5px 0; }
+#quickpay-swagger .panel .panel-heading { padding: 4px; }
+#quickpay-swagger .panel .panel-heading a { color: inherit; text-decoration: none; }
+#quickpay-swagger .panel .panel-heading .panel-title { font-size: 16px !important; font-weight: 400 !important; line-height: 22px; }
+#quickpay-swagger .panel .panel-heading .panel-title .label { display: inline-block; min-width: 80px; padding: 4px; line-height: 18px; }
+#quickpay-swagger .panel .panel-body { color: #000; }
+#quickpay-swagger .panel .panel-body h4 { color: #555 !important; }
+#quickpay-swagger .panel .panel-body .table,#quickpay-swagger .panel .panel-body .t {background: #fff!important;}
+
+.code-examples .nav-tabs li.active a, .code-examples-no-tabs .nav-tabs li.active a { background-color: #f5f5f5; }
+.code-examples .nav-tabs li.active a:hover, .code-examples-no-tabs .nav-tabs li.active a:hover { background-color: #f5f5f5; }
+.code-examples .highlight pre, .code-examples-no-tabs .highlight pre { border-top: 0px !important; border-radius: 0 0 4px 4px; border-color: #ddd; }
+.code-examples .highlight pre code, .code-examples-no-tabs .highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
+.code-examples .highlight pre code span, .code-examples-no-tabs .highlight pre code span { font-family: Monaco, monospace !important; }
+.code-examples .highlight pre code span.lineno, .code-examples-no-tabs .highlight pre code span.lineno { color: #ccc; display: inline-block; padding: 0 5px; border-right: 1px solid #ccc; }
+
+.code-examples-no-tabs .highlight pre { border: 1px solid #ddd !important; border-radius: 4px; }
+
+.table.first-column-nowrap tr td:first-child { white-space: nowrap; }
+
+.alert-info a { text-decoration: underline; }
+
+.qp-http-method-GET { background-color: #337ab7; color: #fff; }
+
+.qp-http-method-POST { background-color: #5cb85c; color: #fff; }
+
+.qp-http-method-PUT { background-color: #f0ad4e; color: #fff; }
+
+.qp-http-method-PATCH { background-color: #f0ad4e; color: #fff; }
+
+.qp-http-method-DELETE { background-color: #d9534f; color: #fff; }
+
+.qp-http-method-GET-light { background-color: #bce8f1 !important; border-color: #bce8f1 !important; color: #337ab7; }
+
+.qp-http-method-POST-light { background-color: #d6e9c6 !important; border-color: #d6e9c6 !important; color: #3c763d; }
+
+.qp-http-method-PUT-light { background-color: #faebcc !important; border-color: #faebcc !important; color: #8a6d3b; }
+
+.qp-http-method-PATCH-light { background-color: #faebcc !important; border-color: #faebcc !important; color: #8a6d3b; }
+
+.qp-http-method-DELETE-light { background-color: #ebccd1 !important; border-color: #ebccd1 !important; color: #a94442; }
+
+/** Syntax highlighting styles */
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight { margin-bottom: 2; }
+
+.highlight { background: #fff; }
+.highlight .c { color: #998; font-style: italic; }
+.highlight .err { color: #a61717; background-color: #e3d2d2; }
+.highlight .k { font-weight: bold; }
+.highlight .o { font-weight: bold; }
+.highlight .cm { color: #998; font-style: italic; }
+.highlight .cp { color: #999; font-weight: bold; }
+.highlight .c1 { color: #998; font-style: italic; }
+.highlight .cs { color: #999; font-weight: bold; font-style: italic; }
+.highlight .gd { color: #000; background-color: #fdd; }
+.highlight .gd .x { color: #000; background-color: #faa; }
+.highlight .ge { font-style: italic; }
+.highlight .gr { color: #a00; }
+.highlight .gh { color: #999; }
+.highlight .gi { color: #000; background-color: #dfd; }
+.highlight .gi .x { color: #000; background-color: #afa; }
+.highlight .go { color: #888; }
+.highlight .gp { color: #555; }
+.highlight .gs { font-weight: bold; }
+.highlight .gu { color: #aaa; }
+.highlight .gt { color: #a00; }
+.highlight .kc { font-weight: bold; }
+.highlight .kd { font-weight: bold; }
+.highlight .kp { font-weight: bold; }
+.highlight .kr { font-weight: bold; }
+.highlight .kt { color: #458; font-weight: bold; }
+.highlight .m { color: #099; }
+.highlight .s { color: #d14; }
+.highlight .na { color: #008080; }
+.highlight .nb { color: #0086B3; }
+.highlight .nc { color: #458; font-weight: bold; }
+.highlight .no { color: #008080; }
+.highlight .ni { color: #800080; }
+.highlight .ne { color: #900; font-weight: bold; }
+.highlight .nf { color: #900; font-weight: bold; }
+.highlight .nn { color: #555; }
+.highlight .nt { color: #000080; }
+.highlight .nv { color: #008080; }
+.highlight .ow { font-weight: bold; }
+.highlight .w { color: #bbb; }
+.highlight .mf { color: #099; }
+.highlight .mh { color: #099; }
+.highlight .mi { color: #099; }
+.highlight .mo { color: #099; }
+.highlight .sb { color: #d14; }
+.highlight .sc { color: #d14; }
+.highlight .sd { color: #d14; }
+.highlight .s2 { color: #d14; }
+.highlight .se { color: #d14; }
+.highlight .sh { color: #d14; }
+.highlight .si { color: #d14; }
+.highlight .sx { color: #d14; }
+.highlight .sr { color: #009926; }
+.highlight .s1 { color: #d14; }
+.highlight .ss { color: #990073; }
+.highlight .bp { color: #999; }
+.highlight .vc { color: #008080; }
+.highlight .vg { color: #008080; }
+.highlight .vi { color: #008080; }
+.highlight .il { color: #099; }
