--- a/templates/apisvctemplate.html
+++ b/templates/apisvctemplate.html
@@ -133,7 +133,12 @@
                                                     <tbody>
                                                       <!--  -->
                                                       <tr>
-                                                        <td>{{method[s]['func_description_long']}}</td>
+
+                                                          {% set ful_desc = method[s]['func_description_long']  %}
+                                                          {% if ful_desc is None  %}
+                                                                {% set ful_desc = '' %}
+                                                          {% end %}
+                                                        <td>{{ful_desc}}</td>
                                                       </tr>
                                                       <!--  -->
                                                     </tbody>
@@ -166,6 +171,7 @@
                                                        {% end %}
 
                                                         {% if 'req' in ms['parameters'][keys] %}
+                                                        {{ms['parameters'][keys]['req']}}
                                                             {% set p_req = ms['parameters'][keys]['req'] %}
                                                        {% else %}
                                                             {% set p_req = '' %}
@@ -207,6 +213,9 @@
 
                                                                                     {% if 'description' in ms['return'][keys] %}
                                                                                         {% set r_description = ms['return'][keys]['description'] %}
+                                                                                        {% if r_description ==  "Missing description" %}
+                                                                                                {% set r_description = '' %}
+                                                                                        {% end %}
                                                                                     {% else %}
                                                                                         {% set r_description = '' %}
                                                                                     {% end %}
