--- a/base/application/templates/specification.html
+++ b/base/application/templates/specification.html
@@ -1,11 +1,229 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>api</title>
-</head>
-<body>
-    <h1>specification</h1>
-    <div>{{ spec }}</div>
-</body>
-</html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<style>
+
+.inline{
+  display:inline;
+  padding:5px 10px;
+  font-family: 'Roboto', 'Arial Narrow', sans-serif;
+  font-weight: 300;
+  background:#fafafa;
+}
+.table{margin-top:20px;width:100%;background:white;padding:10px; margin:0px;}
+.table thead * {
+    font-weight: bold !important;
+    background: #e5e5e5 !important;
+}
+.table td{
+      padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+.label {
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+
+}
+
+.h2{
+  width:100wv;
+  height:25px;
+  text-align:center;
+  padding:4px 4px 5px 4px;
+  margin-top:5px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  border-color: #bce8f1;
+  border-top-left-radius: .25em;
+  border-top-right-radius: .25em;
+  cursor:pointer;
+}
+.border-bottom{
+  border-bottom-left-radius: .25em;
+  border-bottom-right-radius: .25em;
+}
+.method{
+    display: inline-block;
+    min-width: 80px;
+    padding: 4px;
+    line-height: 18px;
+    color: #fff;
+    float:left;
+
+}
+.light-blue{background-color: #bce8f1;}
+.dark-blue{background-color: #337ab7;}
+.color-blue{color: #337ab7;}
+
+.light-green{
+    background-color: #d6e9c6;
+    border-color: #d6e9c6;
+    }
+.dark-green{
+    background-color: #5cb85c;
+    color: #fff;}
+.color-green{color: #5cb85c;}
+.light-yellow{
+    background-color: #faebcc;
+    border-color: #faebcc;
+    }
+.dark-yellow{background-color: #f0ad4e;}
+.color-yellow{color: #f0ad4e;}
+
+.light-red{
+    background-color: #ebccd1;
+    border-color: #ebccd1;
+    /* color: #a94442; */
+}
+.color-red{color: #d9534f;}
+.dark-red{
+    background-color: #d9534f;
+    color: #fff;}
+
+.content{
+  width:100wv;
+
+  display:none;
+  padding:10px;
+}
+</style>
+<script>
+$(document).ready(function(){
+
+    $(".btn").click(function(){
+      $(this).toggleClass('border-bottom');
+      var id = $(this).attr('data-id')
+      $("#drop-"+id).slideToggle()
+});
+
+});
+</script>
+
+
+<div id="cc">
+{% set color = '' %}
+                {% set x = 0 %}
+
+    {% for req in spec['api'] %}
+        {% for r in spec['api'][req] %}
+
+
+        {% for s in r %}
+            {% if s == 'post' %}
+                {% set color = 'green' %}
+            {% elif s == 'get' %}
+                {% set color = 'blue' %}
+            {% elif s == 'put' %}
+                {% set color = 'yellow' %}
+            {% else %}
+                {% set color = 'red' %}
+            {% end %}
+            {% if  r[s]['uri'] != None %}
+                {% set url = r[s]['uri'] %}
+            {% else %}
+                {% set url = 'Missing url' %}
+            {% end %}
+            {% if  r[s]['description'] != None %}
+                {% set desc = r[s]['description'] %}
+            {% else %}
+                {% set desc = 'Missing description' %}
+            {% end %}
+            {% if  r[s]['autenticated'] != None %}
+                {% set auth = r[s]['autenticated'] %}
+            {% else %}
+                {% set auth = 'Missing description' %}
+            {% end %}
+            {% set method = s %}
+
+
+            <div class='btn border-bottom h2 light-{{color}}' data-id='{{ x }}' id='btn-{{x}}' >
+                <div class='label method dark-{{color}}'>{{ method }}</div>
+                    <span class='color-{{color}}' style='float:left;padding-left:10px;'>{{url}}</span>
+                    <a style='display: inline-block; margin: 2px 5px; float: right; cursor: pointer;'>
+                        <i class='fa fa-link'></i>
+                    </a>
+                    <span class='color-{{color}}' style='float: right'>{{ desc }} - {{ auth }}</span>
+                </div>
+                <div id='drop-{{x}}' class='light-{{color}} content '>
+                    <!--START CONTENT-->
+
+
+
+
+                    <h4 style=''>Request Parameters</h4>
+                    <table class='table'>
+                        <thead>
+                            <tr>
+                                <td>Parameter</td>
+                                <td>Description</td>
+                                <td>Parameter Type</td>
+                                <td>Data Type</td>
+                                <td>Default</td>
+                                <td>Required?</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% set params = r[s]['params'] %}
+                            {% for i in params %}
+                            <tr>
+                                <td>{{ params[i]['name'] }}</td>
+                                <td></td>
+                                <td>{{ params[i]['type'] }}</td>
+                                <td>{{ params[i]['type'] }}</td>
+                                <td>
+
+                                </td>
+                                <td>{{ params[i]['required'] }}</td>
+                            </tr>
+                        {% end %}
+                        </tbody>
+                    </table>
+
+
+                <!--END CONTENT-->
+                </div>
+
+            </div>
+            {% set x = x+1 %}
+        {% end %}
+
+        {% end %}
+{% end %}
+
+Potrebi su jos Response Messages unutar svakog poziva... Napisao sam responsive_msg ispod
+            "get":{
+               "params":{
+                  "key":{
+                     "name":"key",
+                     "required":true,
+                     "type":"str"
+                  }
+               },
+               "uri":"/tools/option/{key}",
+               "autenticated":false,
+               "description":"Missing description"
+            -----------------------------------------
+                "response_msg":{
+                    "201":{
+                        "status_code":"201",
+                        "reason":"Created",
+                    },"400":{
+                        "status_code":"400",
+                        "reason":"Invalid parameters",
+                    },"403":{
+                        "status_code":"201",
+                        "reason":"Not authorized",
+                    },
+
+
+            -----------------------------------------
